fixed logout issue, improved UI and Added bootstrap collapse in my order component

--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -21,7 +21,7 @@ h1 {
 }
 .cart .cart-products {
   width: 100%;
-  background: rgba(240, 248, 255, 0.568);
+  background: rgb(240, 248, 255);
   border-radius: 10px;
 }
 .cart .cart-main {
