--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  background: rgba(180, 173, 78, 0.384);
+  /* background: rgba(180, 173, 78, 0.384); */
   border-radius: 10px;
   padding: 3%;
   /* margin: 1%; */
