--- a/src/app/search-results-dis/search-results-dis.component.css
+++ b/src/app/search-results-dis/search-results-dis.component.css
@@ -2,25 +2,28 @@
   display: flex;
   flex-wrap: wrap;
   /* justify-content: space-between; */
-  background: rgba(180, 173, 78, 0.384);
+  /* background: rgba(180, 173, 78, 0.384); */
   border-radius: 10px;
   padding: 25px;
   margin: 25px;
   margin-bottom: 0;
 }
 .no-query {
-  background: rgba(255, 255, 255, 0.61);
+  background: #fff;
+  border-radius: 5px;
   padding: 10%;
   width: 100%;
 }
 .no-query p {
   width: 100%;
+
   text-align: center;
-  color: rgb(152 133 77);
+
+  color: #666;
 }
 .no-query img {
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   object-fit: cover;
 }
 .sort-by-price {
